k0s-home/manifests/wireguard/manifest.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: wireguard-k0s
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: wg-portal
    app.kubernetes.io/version: v2
    helm.sh/chart: wg-portal-0.7.0
  name: wireguard-k0s-wg-portal
spec:
  ports:
    - appProtocol: http
      name: web
      port: 8888
      protocol: TCP
      targetPort: web
  selector:
    app.kubernetes.io/instance: wireguard-k0s
    app.kubernetes.io/name: wg-portal
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: wireguard-k0s
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: wg-portal
    app.kubernetes.io/version: v2
    helm.sh/chart: wg-portal-0.7.0
  name: wireguard-k0s-wg-portal-wireguard
spec:
  ports:
    - name: wg0
      port: 51820
      protocol: UDP
      targetPort: wg0
  selector:
    app.kubernetes.io/instance: wireguard-k0s
    app.kubernetes.io/name: wg-portal
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: wireguard-k0s
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: wg-portal
    app.kubernetes.io/version: v2
    helm.sh/chart: wg-portal-0.7.0
  name: wireguard-k0s-wg-portal
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: wireguard-k0s
      app.kubernetes.io/name: wg-portal
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/config: b281dc15922608c7bb24e55d1547cb68d395db665bdf6bfd2ca6b0405b768f78
        kubectl.kubernetes.io/default-container: wg-portal
      labels:
        app.kubernetes.io/instance: wireguard-k0s
        app.kubernetes.io/name: wg-portal
    spec:
      automountServiceAccountToken: false
      containers:
        - image: ghcr.io/h44z/wg-portal:v2
          imagePullPolicy: IfNotPresent
          name: wg-portal
          ports:
            - containerPort: 8787
              name: metrics
              protocol: TCP
            - containerPort: 8888
              name: web
              protocol: TCP
            - containerPort: 51820
              name: wg0
              protocol: UDP
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          volumeMounts:
            - mountPath: /app/config
              name: config
              readOnly: true
            - mountPath: /app/data
              name: data
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: wireguard-k0s-wg-portal
      volumes:
        - name: config
          secret:
            secretName: wireguard-k0s-wg-portal
        - emptyDir: {}
          name: data
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: wireguard-k0s
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: wg-portal
    app.kubernetes.io/version: v2
    helm.sh/chart: wg-portal-0.7.0
  name: wireguard-k0s-wg-portal
spec:
  ingressClassName: traefik
  rules:
    - host: wireguard.k0s-fullstack.fredcorp.com
      http:
        paths:
          - backend:
              service:
                name: wireguard-k0s-wg-portal
                port:
                  name: web
            path: /
            pathType: ImplementationSpecific
